# visualization-of-concepts-of-mathematics

./: .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile.in
project/src/: CMakeLists.txt  main.cpp  some_function.cpp
project/src/include/: some_function.hpp
project/src/include/utils/: sdl_utils.hpp
project/src/utils/: CMakeLists.txt  sdl_utils.cpp
test/: CMakeLists.txt  main.cpp  test_utils.cpp
